<resources>
    <string name="app_name">QTest</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_feed">Feed</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="remember_me">Remember Me</string>
    <string name="username">Username</string>
    <string name="google_signin_failed">Google Sign in failed</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="facebook_app_id">233803317648897</string>
    <string name="fb_login_protocol_scheme">fb233803317648897</string>
    <string name="client_id">334548647127-h3btt8nqjebnobeentau4ptkqh5mbste.apps.googleusercontent.com</string>
    <string name="search_products">Search Products</string>
    <string name="blank">-</string>
</resources>
